--- a/doc/paper17/conclusion.tex
+++ b/doc/paper17/conclusion.tex
@@ -1,6 +1,6 @@
 \section{Conclusion}
 
-This paper has presented the partitioned global address space (PGLAS)
+This paper has presented the partitioned global logical address space (PGLAS)
 programming model and its first realization through the Parallel Distributed
 Hash Table (PDHT).  PDHT system makes novel use of the Portals networking
 interface by re-purposing its message-matching system to operate as an
