--- a/doc/paper17/bibdb.bib
+++ b/doc/paper17/bibdb.bib
@@ -83,8 +83,8 @@
   author    = {Lisa Phillips and
                Brad Fitzpatrick},
   title     = {LiveJournal's Backend and memcached: Past, Present, and Future},
-  booktitle = {Proceedings of the 18th Conference on Systems Administration {(LISA)}
-               2004), Atlanta, USA, November 14-19, 2004},
+  booktitle = {Proc. of the 18th Conference on Systems Administration {(LISA)}
+               2004), November 14-19, 2004},
   year      = {2004},
   crossref  = {DBLP:conf/lisa/2004},
   timestamp = {Thu, 15 May 2014 18:36:22 +0200},
@@ -435,8 +435,8 @@
     pages = {293--306},
     numpages = {14},
     acmid = {1924964},
-    publisher = {USENIX Association},
-    address = {Berkeley, CA, USA},
+    publisher = {},
+    address = {},
 } 
 
 @inproceedings{schneider:13,
@@ -583,8 +583,7 @@
     month = oct,
     year = {2010},
     title = {{Information technology -- Programming languages -- Fortran -- Part 1: Base language}},
-    address = {Geneva, CH},
-    institution = {International Organization for Standardization}
+    institution = {Int'l Organization for Standardization}
 }
 
 @article{niu:16,
@@ -620,7 +619,7 @@
 @inproceedings{ georganas:14,
     author = {Georganas, Evangelos and Bulu\c{c}, Aydin and Chapman, Jarrod and Oliker, Leonid and Rokhsar, Daniel and Yelick, Katherine},
     title = {Parallel De Bruijn Graph Construction and Traversal for De Novo Genome Assembly},
-    booktitle = {Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis},
+    booktitle = {Proc. of the Int'l Conference for High Performance Computing, Networking, Storage and Analysis},
     series = {SC '14},
     year = {2014},
     isbn = {978-1-4799-5500-8},
