--- a/doc/paper17/introduction.tex
+++ b/doc/paper17/introduction.tex
@@ -94,7 +94,7 @@ constructs that are aligned with the communication operations supported by
 low-level communications systems. 
 
 Portals is designed as a low-level abstraction layer for the network interface
-hardware. The Portals structures and communication operations operations are
+hardware. The Portals communication operations operations are
 meant to support the efficient implementation of high-performance programming
 interfaces and runtime systems that provide either message-passing semantics
 (such as MPI), or one-sided, partitioned global address (PGAS) support. For
