Update Intel disclaimer
Former-commit-id: dc4374030ede3d0421da21a18691eb653f08d388

--- a/doc/paper17/paper.tex
+++ b/doc/paper17/paper.tex
@@ -152,15 +152,16 @@
 \framebox{
   \parbox{\columnwidth}
   {
-  Intel and Xeon are trademarks of Intel Corporation in the U.S. and/or other countries.
-  Software and workloads used in performance tests may have been optimized
-  for performance only on Intel microprocessors.  Performance tests, such as
-  SYSmark and MobileMark, are measured using specific computer systems,
-  components, software, operations and functions.  Any change to any of those
-  factors may cause the results to vary.  You should consult other information
-  and performance tests to assist you in fully evaluating your contemplated
-  purchases, including the performance of that product when combined with
-  other products.  For more information go to \url{http://www.intel.com/performance}.
+  Intel and Xeon are trademarks of Intel Corporation in the U.S. and/or other
+  countries.  Software and workloads used in performance tests may have been
+  optimized for performance only on Intel microprocessors. Performance tests,
+  such as SYSmark and MobileMark, are measured using specific computer
+  systems, components, software, operations and functions. Any change to any
+  of those factors may cause the results to vary. You should consult other
+  information and performance tests to assist you in fully evaluating your
+  contemplated purchases, including the performance of that product when
+  combined with other products.
+  For more information go to \url{http://www.intel.com/benchmarks}.
   }
 }
 %\normalsize
